force-app/main/incentive-program/objects/Study_Incentive_Plan__c/Study_Incentive_Plan__c.object-meta.xml
<CustomObject>
    <label>Study Incentive Plan</label>
    <nameField>
        <displayFormat>SIP-{000000}</displayFormat>
        <label>Study Incentive Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Incentive Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>