force-app/main/incentive-program/objects/Study_Incentive_Plan__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>Study Incentive Plans</relationshipLabel>
    <relationshipName>Study_Incentive_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>