force-app/main/incentive-program/objects/Study_Incentive_Plan__c/fields/Incentive_Plan__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive Plan</label>
    <referenceTo>Incentive_Plan__c</referenceTo>
    <relationshipLabel>Study Incentive Plans</relationshipLabel>
    <relationshipName>Study_Incentive_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>