force-app/main/incentive-program/objects/Study_Incentive_Plan__c/fields/Study_Site__c.field-meta.xml
<CustomField>
    <fullName>Study_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Site</label>
    <referenceTo>Study_Site__c</referenceTo>
    <relationshipLabel>Study Incentive Plans</relationshipLabel>
    <relationshipName>Study_Incentive_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>